objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Abstract__c</fullName>
        <label>Abstract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Behind_Milestones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behind Milestones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <picklist>
            <picklistValues>
                <fullName>30 Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Minutes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Room_Size__c</fullName>
        <label>Estimated Room Size</label>
        <picklist>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theater</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Doc__c</fullName>
        <label>Google Doc</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IDin62__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>IDin62</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Speaker__c</fullName>
        <label>Lead Speaker</label>
        <referenceTo>Session_Speaker__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestones__c</fullName>
        <label>Milestones</label>
        <picklist>
            <picklistValues>
                <fullName>Tile Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abstract Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speakers Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slides Drafted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slides Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Run Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Run Approved</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Topic__c</fullName>
        <label>Other Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Abstract__c</fullName>
        <label>Private Abstract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Title__c</fullName>
        <label>Private Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safe_to_Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safe to Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <label>Sponsor</label>
        <referenceTo>Content_Owners__c</referenceTo>
        <relationshipLabel>Sessions (Sponsor)</relationshipLabel>
        <relationshipName>Sessions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Suggested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Theater_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Theater Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>To_Be_Determined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declarative</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <picklist>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SES-{0000}</displayFormat>
        <label>Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>